<resources>
    <string name="app_name">Dyslexicon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="instructions">
        1. You are supposed to make as many words as you can from the given set of letters in the grid.
        \n2. If the submitted word is a valid one in the word list then it is added to the list and the score would be updated.
        \n3.Sometimes the word is correct, but is not in the word list, you can not get score.
        \n4. If you can not remember, do not click the words in the right top of screen to check!
        \n5. When you finish the game, you can leave and continue. If you continue, the game will refresh.
        \n6. If you choose wrong letter, do not afraid, just click it again it will cancel.
        \n7. A letter can be a word!

</string>
        <string name="blackboardins">1. Swipe the blackboard to change the word.
        \n2.Click the respective picture of the word to zoom in.
        \n3.Change button --> Changes image of the word
        </string>

<string name="sendcalendar">1.Click connect calendar first to synchronous your calendar and then fill the title first.
\n2.Choose at least one activity.
\n3.Choose a date(datepicker is at the right bottom of screen and it will appear on the screen.
\n4.Send the reminder to the calender.</string>
    <string name="eyetracker">1.Click start button to track the aim.
    \n2.Choose the change button to change the image and track route.
    \n3.Click stop button to stop this activity.</string>
    <string name="play_caps">PLAY</string>
    <string name="about_caps">ABOUT</string>
    <string name="instructions_caps">INSTRUCTIONS</string>
    <string name="text_Words">Words</string>
    <string name="leave">Back to Game</string>
    <string name="confir">Continue</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_infornation_page">infornationPage</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_information">information</string>
    <string name="addButton">ADD</string>
    <string name="wordTextView">Word: </string>
    <string name="imageTextView">Image: </string>
    <string name="commentTextView">Comment: </string>
    <string name="removeButton">REMOVE</string>
    <string name="addImageButton">ADD IMAGE</string>
    <string name="updateCommentButton">UPDATE</string>
    <string name="clearCommentButton">CLEAR</string>
    <string name="captureImageButton">CAMERA</string>
    <string name="removeImageButton">Remove Image</string>
    <string name="listMarkButton">MARK</string>
    <string name="startGameButton">START GAME</string>
    <string name="addWordButton">ADD WORDS</string>
    <string name="menu_insert">Insert</string>
    <string name="menu_delete">Delete</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>
    <string name="tab_day">Day</string>
    <string name="tab_time">Time</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;/i&gt;&lt;br/&gt;Address: %2$s&lt;br/&gt;Phone: %3$s&lt;br/&gt;Website: %4$s</string>

<string name="ok">OK</string>
    <string-array name="days_array">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Every day</item>
        <item>Mon - Fri</item>
        <item>Sat and Sun</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="txtCredits"><a href="http://www.google.com">Google</a></string>
    <string name="title1">God of War Ascension</string>
    <string name="title2">Assassin\'s Creed III</string>
    <string name="title3">Hitman Absolution</string>
    <string name="title4">Dishonored</string>

<string name="leave2">leave</string>

    <string name="aq_disorientation">The persons threshold for confusion is a key factor in how often he or she disorients.</string>
    <string name="aq_readspell">Anomaly in reading and spelling as a a sign of dyslexia.</string>
    <string name="aq_attention">The person’s difficulty in focusing attention and controlling behaviour while reading/writing.</string>
    <string name="aq_math">Confusion and diffculty in solving math problems.</string>
    <string name="aq_handwriting">How and to what extent distorted handrwriting is a sign of dyslexia.</string>
    <string name="aq_personality">Usual perosnality characteristics induced by dyslexia.</string>

</resources>
