<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tarik.triggerwordsv1.WordActivity">

    <LinearLayout
        android:id="@+id/mainBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c2fef4"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#c2eafe"
            android:padding="10dp">

            <TextView
                android:id="@+id/wordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wordTextView"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/wordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#c2eafe"
            android:padding="10dp">

            <TextView
                android:id="@+id/imageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageTextView"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/imageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:background="#c2eafe"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9">

                    <TextView
                        android:id="@+id/commentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/commentTextView"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/commentEditText"
                        style="@style/editTextClassic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:inputType="textMultiLine"
                        android:textAlignment="textStart" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/updateCommentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/updateCommentButton" />

                    <Button
                        android:id="@+id/clearCommentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/clearCommentButton" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/removeButton"
        android:layout_below="@+id/mainBox"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/removeButton"
        android:text="@string/addButton" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainBox"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/removeButton" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/removeImageButton"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="30dp"
        android:text="@string/addImageButton" />

    <Button
        android:id="@+id/captureImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/removeImageButton"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/removeImageButton"
        android:text="@string/captureImageButton" />

    <Button
        android:id="@+id/removeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/removeImageButton" />


</RelativeLayout>
